# sieve_gui

./: .gitignore  Cargo.toml
sieve_client/: Cargo.toml
sieve_client/src/: lib.rs  parser.rs  sieve_client.rs
sieve_client/src/parser/: util.rs
sieve_gui/: Cargo.toml
sieve_gui/.sqlx/: query-14f16494b09d2d689e8420d0dc57a644d6d6c4f0b60bec5bd0b4e5db93cfb110.json  query-3e317ae953379e421d8b677bdd32306783d6934175725395aaa5ccd8c3b97ccf.json  query-7b7ed409ab0b2f2d4d19f62fae099d60079d3a5594c9ec620a99830085e39f66.json
sieve_gui/migrations/: 20250711150623_create_accounts_table.sql
sieve_gui/src/: main.rs  ui.rs
sieve_gui/src/ui/: account_select.rs  add_account.rs  manage.rs
src/: main.rs  sieve_client.rs
