[package]
name = "sieve-gui"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
nom = "7.1.3"
rustls = "0.23"
rustls-pki-types = "1.0"
rustls-webpki = "0.102"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["full"] }
tokio-rustls = "0.26"
webpki-roots = "0.26"
