[package]
name = "sieve_client"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22"
clap = { version = "4.5", features = ["derive", "env"] }
dotenv = "0.15"
nom = "7.1.3"
rustls = "0.23"
rustls-pki-types = "1.0"
rustls-webpki = "0.102"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["full"] }
tokio-rustls = "0.26"
webpki-roots = "0.26"
